// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedTextInput should match snapshot 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 15,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    test input
  </Text>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#85B2B5",
          "borderRadius": 10,
          "padding": 10,
        },
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/assets/images/user.png",
        }
      }
    />
    <TextInput
      onChangeText={[Function]}
      style={
        Object {
          "color": "#555F60",
          "flex": 1,
          "fontWeight": "500",
          "marginLeft": 10,
        }
      }
      value="test input"
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 15,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;

exports[`UI: ExtendedTextInput should match snapshot 2`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 15,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    password toggle test input
  </Text>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#85B2B5",
          "borderRadius": 10,
          "padding": 10,
        },
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/assets/images/lock.png",
        }
      }
    />
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "color": "#555F60",
              "flex": 1,
              "fontWeight": "500",
              "marginLeft": 10,
            },
            Object {
              "borderBottomWidth": 0,
              "flex": 1,
            },
          ]
        }
        value="test input"
      />
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 15,
              "width": 15,
            }
          }
        />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 15,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;
